--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 h1 {
 	font-family: Tahoma, Geneva, sans-serif;
-	color: #666;
+	color: #ccc;
+}
+body {
+	background-color: #000;
 }
