--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @charset "utf-8";
 h1 {
-	font-family: Tahoma, Geneva, sans-serif;
 	color: #ccc;
 }
 body {
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 14px;
+	color: #ffffff;
 	background-color: #000;
 }
